--- a/content/publication/example/cite.bib
+++ b/content/publication/example/cite.bib
@@ -1,8 +1,8 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@inproceedings{sundaram2021pac,
+  title={PAC-Learning for Strategic Classification},
+  author={Sundaram, Ravi and Vullikanti, Anil and Xu, Haifeng and Yao, Fan},
+  booktitle={International Conference on Machine Learning},
+  pages={9978--9988},
+  year={2021},
+  organization={PMLR}
 }
