add working papers

--- a/content/publication/LIHF/cite.bib
+++ b/content/publication/LIHF/cite.bib
@@ -1,6 +1,6 @@
-@article{yao2022learning,
-  title={Learning from a Learning User for Optimal Recommendations},
-  author={Yao, Fan and Li, Chuanhao and Nekipelov, Denis and Wang, Hongning and Xu, Haifeng},
-  journal={arXiv preprint arXiv:2202.01879},
-  year={2022}
+@article{cheng2024learning,
+  title={Learning from Imperfect Human Feedback: a Tale from Corruption-Robust Dueling},
+  author={Cheng, Yuwei and Yao, Fan and Liu, Xuefeng and Xu, Haifeng},
+  journal={arXiv preprint arXiv:2405.11204},
+  year={2024}
 }
